--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_svg: ^2.0.10+1
   flutter_staggered_animations: ^1.1.1
+  badges: ^3.1.2
+  shared_preferences: ^2.2.3
   # equatable: ^2.0.5
   # syncfusion_flutter_datepicker: ^25.1.38
   # bottom_picker: ^2.6.0
@@ -81,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - images/svg/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
