--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   badges: ^3.1.2
   shared_preferences: ^2.2.3
+  scrollable_positioned_list: ^0.3.8
+  flutter_slidable: ^3.1.0
+  video_player: ^2.8.6
+  flick_video_player: ^0.8.0
   # equatable: ^2.0.5
   # syncfusion_flutter_datepicker: ^25.1.38
   # bottom_picker: ^2.6.0
